--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>ElemExam by Elemsecret</title>
-    <link rel="icon" href="/public/images/favicon.png" sizes="32x32">
+    <link rel="icon" href="public/images/favicon.png" sizes="32x32">
     <meta name='robots' content='max-image-preview:large'/>
     <link rel='dns-prefetch' href='//fonts.googleapis.com'/>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato%3A300%2C400%2C700%2C900">
-    <link rel="stylesheet" href="/public/styles/main.css">
+    <link rel="stylesheet" href="public/styles/main.css">
 </head>
 <body class="home page app-data index-data singular-data page-data page-5-data page-home-data front-page-data">
 <header class="ee-header">
@@ -41,9 +41,9 @@
                     <h2 class="ee-products__title">
                         Tesla Model 3
                     </h2>
-                    <img width="1024" height="640" src="/public/images/tesla-m3-1024x640.jpeg"
+                    <img width="1024" height="640" src="public/images/tesla-m3-1024x640.jpeg"
                          class="attachment-large size-large wp-post-image" alt="" loading="lazy"
-                         srcset="/public/images/tesla-m3-1024x640.jpeg 1024w, /public/images/tesla-m3-300x188.jpeg 300w, /public/images/tesla-m3-768x480.jpeg 768w, /public/images/tesla-m3-1536x960.jpeg 1536w, /public/images/tesla-m3-2048x1280.jpeg 2048w"
+                         srcset="public/images/tesla-m3-1024x640.jpeg 1024w, public/images/tesla-m3-300x188.jpeg 300w, public/images/tesla-m3-768x480.jpeg 768w, public/images/tesla-m3-1536x960.jpeg 1536w, public/images/tesla-m3-2048x1280.jpeg 2048w"
                          sizes="(max-width: 1024px) 100vw, 1024px">
                     <div class="ee-products__footer">
                         <a class="ee-products__button ee-button ee-button--outline"
@@ -57,9 +57,9 @@
                     <h2 class="ee-products__title">
                         Tesla Model S
                     </h2>
-                    <img width="1024" height="640" src="/public/images/tesla-ms-1024x640.jpeg"
+                    <img width="1024" height="640" src="public/images/tesla-ms-1024x640.jpeg"
                          class="attachment-large size-large wp-post-image" alt="" loading="lazy"
-                         srcset="/public/images/tesla-ms-1024x640.jpeg 1024w, /public/images/tesla-ms-300x188.jpeg 300w, /public/images/tesla-ms-768x480.jpeg 768w, /public/images/tesla-ms-1536x960.jpeg 1536w, /public/images/tesla-ms-2048x1280.jpeg 2048w"
+                         srcset="public/images/tesla-ms-1024x640.jpeg 1024w, public/images/tesla-ms-300x188.jpeg 300w, public/images/tesla-ms-768x480.jpeg 768w, public/images/tesla-ms-1536x960.jpeg 1536w, public/images/tesla-ms-2048x1280.jpeg 2048w"
                          sizes="(max-width: 1024px) 100vw, 1024px">
                     <div class="ee-products__footer">
                         <a class="ee-products__button ee-button ee-button--outline"
@@ -73,9 +73,9 @@
                     <h2 class="ee-products__title">
                         Tesla Model X
                     </h2>
-                    <img width="1024" height="640" src="/public/images/tesla-mx-1024x640.jpeg"
+                    <img width="1024" height="640" src="public/images/tesla-mx-1024x640.jpeg"
                          class="attachment-large size-large wp-post-image" alt="" loading="lazy"
-                         srcset="/public/images/tesla-mx-1024x640.jpeg 1024w, /public/images/tesla-mx-300x188.jpeg 300w, /public/images/tesla-mx-768x480.jpeg 768w, /public/images/tesla-mx-1536x960.jpeg 1536w, /public/images/tesla-mx-2048x1280.jpeg 2048w"
+                         srcset="public/images/tesla-mx-1024x640.jpeg 1024w, public/images/tesla-mx-300x188.jpeg 300w, public/images/tesla-mx-768x480.jpeg 768w, public/images/tesla-mx-1536x960.jpeg 1536w, public/images/tesla-mx-2048x1280.jpeg 2048w"
                          sizes="(max-width: 1024px) 100vw, 1024px">
                     <div class="ee-products__footer">
                         <a class="ee-products__button ee-button ee-button--outline"
