allow github pages to access public api

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 </footer>
 <script type='text/javascript' id='sage/main.js-js-extra'>
     /* <![CDATA[ */
-    var main = {"api_base_url": "/api"};
+    var main = {"api_base_url": "https://api.elemexam.xyz"};
     /* ]]> */
 </script>
 <script defer src="public/scripts/main.js"></script>
