--- a/index.html
+++ b/index.html
@@ -106,9 +106,9 @@
 <footer class="ee-footer">
     This website was built for demonstration purposes only by <a href="https://uixprt.com" target="_blank">@uixprt</a>.
 </footer>
-<script type='text/javascript' id='sage/main.js-js-extra'>
+<script type='text/javascript'>
     /* <![CDATA[ */
-    var main = {"api_base_url": "https://api.elemexam.xyz"};
+    var main = {"apiBaseUrl": "https://api.elemexam.xyz"};
     /* ]]> */
 </script>
 <script defer src="public/scripts/main.js"></script>
