home url to source code og github

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body class="home page app-data index-data singular-data page-data page-5-data page-home-data front-page-data">
 <header class="ee-header">
     <nav class="ee-header__nav ee-container">
-        <a class="ee-logo" href="/">
+        <a class="ee-logo" href="https://github.com/uixprt/productsBox/">
             <h1>
                 <span class="ee-logo__elem">Elem</span><span
                 class="ee-logo__exam">exam</span>
