--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 </footer>
 <script type='text/javascript'>
     /* <![CDATA[ */
-    var main = {"apiBaseUrl": "https://api.elemexam.xyz"};
+    var main = {"apiBaseUrl": "https://api.elem.uixprt.com"};
     /* ]]> */
 </script>
 <script defer src="public/scripts/main.js"></script>
